# sudoku-nn

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: export_requirements.yaml
nn/activation/: base_activation.py  relu.py  softmax.py
nn/layer/: base_layer.py
