[project]
name = "sudoku-nn"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayden",email = "cjjunk29@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "datasets (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
mypy = "^1.15.0"

